--- a/index.html
+++ b/index.html
@@ -570,7 +570,7 @@
                 <i data-lucide="github" class="w-5 h-5"></i> Code
               </a>
               <a
-                href="#"
+                href="https://journal24.vercel.app/"
                 class="inline-flex items-center gap-2 text-gray-400 hover:text-cyan-400 transition"
               >
                 <i data-lucide="external-link" class="w-5 h-5"></i> Demo
@@ -602,7 +602,7 @@
                 <i data-lucide="github" class="w-5 h-5"></i> Code
               </a>
               <a
-                href="#"
+                href="https://edutest-auth.vercel.app/"
                 class="inline-flex items-center gap-2 text-gray-400 hover:text-cyan-400 transition"
               >
                 <i data-lucide="external-link" class="w-5 h-5"></i> Demo
@@ -635,7 +635,7 @@
                 <i data-lucide="github" class="w-5 h-5"></i> Code
               </a>
               <a
-                href="#"
+                href="https://task-flow25.vercel.app/"
                 class="inline-flex items-center gap-2 text-gray-400 hover:text-green-400 transition"
               >
                 <i data-lucide="external-link" class="w-5 h-5"></i> Demo
@@ -1052,3 +1052,4 @@
     <script src="script.js"></script>
   </body>
 </html>
+
