--- a/index.html
+++ b/index.html
@@ -669,7 +669,7 @@
                 <i data-lucide="github" class="w-5 h-5"></i> Code
               </a>
               <a
-                href="#"
+                href="https://myjuqurmbyc6iena45cerd.streamlit.app/"
                 class="inline-flex items-center gap-2 text-gray-400 hover:text-purple-400 transition"
               >
                 <i data-lucide="external-link" class="w-5 h-5"></i> Demo
@@ -1052,4 +1052,5 @@
     <script src="script.js"></script>
   </body>
 </html>
+
 
